album controller